crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q32_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q32"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                                                                               |
|               |   Projection: hits.WatchID, hits.ClientIP, count(*) AS c, sum(hits.IsRefresh), avg(hits.ResolutionWidth)                                                                                         |
|               |     Aggregate: groupBy=[[hits.WatchID, hits.ClientIP]], aggr=[[count(Int64(1)) AS count(*), sum(CAST(hits.IsRefresh AS Int64)), avg(CAST(hits.ResolutionWidth AS Float64))]]                     |
|               |       Projection: hits.WatchID, hits.ClientIP, hits.IsRefresh, hits.ResolutionWidth                                                                                                              |
|               |         BytesProcessedNode                                                                                                                                                                       |
|               |           Filter: CAST(hits.SearchPhrase AS Utf8) != Utf8("")                                                                                                                                    |
|               |             TableScan: hits projection=[WatchID, ClientIP, IsRefresh, ResolutionWidth, SearchPhrase], partial_filters=[CAST(hits.SearchPhrase AS Utf8) != Utf8("")]                              |
| physical_plan | SortExec: TopK(fetch=10), expr=[c@2 DESC], preserve_partitioning=[false]                                                                                                                         |
|               |   CoalescePartitionsExec                                                                                                                                                                         |
|               |     ProjectionExec: expr=[WatchID@0 as WatchID, ClientIP@1 as ClientIP, count(*)@2 as c, sum(hits.IsRefresh)@3 as sum(hits.IsRefresh), avg(hits.ResolutionWidth)@4 as avg(hits.ResolutionWidth)] |
|               |       AggregateExec: mode=FinalPartitioned, gby=[WatchID@0 as WatchID, ClientIP@1 as ClientIP], aggr=[count(*), sum(hits.IsRefresh), avg(hits.ResolutionWidth)]                                  |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                              |
|               |           RepartitionExec: partitioning=Hash([WatchID@0, ClientIP@1], 24), input_partitions=24                                                                                                   |
|               |             AggregateExec: mode=Partial, gby=[WatchID@0 as WatchID, ClientIP@1 as ClientIP], aggr=[count(*), sum(hits.IsRefresh), avg(hits.ResolutionWidth)]                                     |
|               |               ProjectionExec: expr=[WatchID@0 as WatchID, ClientIP@1 as ClientIP, IsRefresh@2 as IsRefresh, ResolutionWidth@3 as ResolutionWidth]                                                |
|               |                 BytesProcessedExec                                                                                                                                                               |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                    |
|               |                     FilterExec: CAST(SearchPhrase@4 AS Utf8) !=                                                                                                                                  |
|               |                       SchemaCastScanExec                                                                                                                                                         |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                                                                    |
|               |                           FallbackOnZeroResultsScanExec                                                                                                                                          |
|               |                             CoalescePartitionsExec                                                                                                                                               |
|               |                               RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                                                              |
|               |                                 DuckSqlExec sql= SELECT "WatchID", "ClientIP", "IsRefresh", "ResolutionWidth", "SearchPhrase" FROM hits WHERE (CAST(SearchPhrase AS VARCHAR) <> '')              |
|               |                                                                                                                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
